<resources>
    <string name="app_name">Android Library</string>
    <string name="changeButtonText">change</string>
    <string name="deleteButtonText">delete</string>
    <string name="appendButtonText">append</string>
    <string name="sendingFile">Sending File&#8230;</string>
    <string name="okButtonText">OK</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="getExportFileNameAlertDialogTitle">Set Filename</string>
    <string name="getExportFileNameAlertDialogToast">Filename cannot be empty.</string>
    <string name="getExportFileNameAlertDialogHint">Enter export filename</string>
    <string name="changeLogAlertDialogTitle">ChangeLog</string>
    <string name="cameraOptionsMenuItemTitle">Camera scanner</string>
    <string name="otherAppsAlertDialogTitle">Other Apps</string>
    <string name="otherAppsImageViewContentDescription">other app</string>
    <string name="aboutVersionTextViewText">Version</string>
    <string name="aboutOtherAppsTextViewText">Other Apps</string>
    <string name="aboutUniversity">Kansas State University</string>
    <string name="aboutTrevorName">Trevor Rife</string>
    <string name="aboutTrevorEMail">trife@ksu.edu</string>
    <string name="aboutJesseName">Jesse Poland</string>
    <string name="aboutJesseEMail">jpoland@ksu.edu</string>
    <string name="aboutWheatGeneticsWebSite">http://wheatgenetics.org</string>
    <string name="aboutPeteName">Peter J. Rosario</string>
    <string name="aboutPeteEMail">peterrosario@ksu.edu\n</string>
    <string name="aboutNSF">\nThis material is based upon work supported by the National Science Foundation (NSF) under NSF-BREAD Grant No. 1543958. Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.</string>
    <string name="scaleExceptionAlertDialogTitle">Scale Issue</string>
    <string name="scaleExceptionAlertDialogMessage">No scale detected.  Please connect scale with an OTG cable and turn the scale on.</string>
    <string name="scaleExceptionAlertDialogPositiveButtonText">Try Again</string>
    <string name="scaleExceptionAlertDialogNegativeButtonText">Ignore</string>
    <string name="activeRadioGroupLabelText">active:</string>
    <string name="nullRadioButtonText">null</string>
    <string name="falseRadioButtonText">false</string>
    <string name="trueRadioButtonText">true</string>
    <string name="ascRadioButtonText">ASC</string>
    <string name="descRadioButtonText">DESC</string>
    <string name="pageEditTextHint">page</string>
    <string name="pageSizeEditTextHint">page size</string>
    <string name="nullValueTextViewText">null</string>
    <string name="DataTypeAlertDialogTitle">DataType</string>
    <string name="ProgramsSearchRequestAlertDialogTitle">ProgramsSearchRequest</string>
    <string name="ProgramsSearchRequestAlertDialogAbbreviationsEditTextHint">abbreviations</string>
    <string name="ProgramsSearchRequestAlertDialogCommonCropNamesEditTextHint">commonCropNames</string>
    <string name="ProgramsSearchRequestAlertDialogLeadPersonDbIdsEditTextHint">leadPersonDbIds</string>
    <string name="ProgramsSearchRequestAlertDialogLeadPersonNamesEditTextHint">leadPersonNames</string>
    <string name="ProgramsSearchRequestAlertDialogObjectivesEditTextHint">objectives</string>
    <string name="ProgramsSearchRequestAlertDialogProgramDbIdsEditTextHint">programDbIds</string>
    <string name="ProgramsSearchRequestAlertDialogProgramNamesEditTextHint">programNames</string>
    <string name="StudySearchRequestAlertDialogTitle">StudySearchRequest</string>
    <string name="StudySearchRequestAlertDialogCommonCropNamesEditTextHint">commonCropNames</string>
    <string name="StudySearchRequestAlertDialogGermplasmDbIdsEditTextHint">germplasmDbIds</string>
    <string name="StudySearchRequestAlertDialogLocationDbIdsEditTextHint">locationDbIds</string>
    <string name="StudySearchRequestAlertDialogObservationVariableDbIdsEditTextHint">observationVariableDbIds</string>
    <string name="StudySearchRequestAlertDialogProgramDbIdsEditTextHint">programDbIds</string>
    <string name="StudySearchRequestAlertDialogProgramNamesEditTextHint">programNames</string>
    <string name="StudySearchRequestAlertDialogSeasonDbIdsEditTextHint">seasonDbIds</string>
    <string name="StudySearchRequestAlertDialogSortByLabelTextViewText">sortBy:</string>
    <string name="StudySearchRequestAlertDialogSortOrderLabelTextViewText">sortOrder:</string>
    <string name="StudySearchRequestAlertDialogStudyDbIdsEditTextHint">studyDbIds</string>
    <string name="StudySearchRequestAlertDialogStudyNamesEditTextHint">studyNames</string>
    <string name="StudySearchRequestAlertDialogStudyTypeDbIdsEditTextHint">studyTypeDbIds</string>
    <string name="StudySearchRequestAlertDialogStudyTypeNamesEditTextHint">studyTypeNames</string>
    <string name="StudySearchRequestAlertDialogTrialDbIdsEditTextHint">trialDbIds</string>
    <string name="StudyLayoutRequestLayoutAlertDialogTitle">StudyLayoutRequestLayout</string>
    <string name="StudyLayoutRequestLayoutAlertDialogBlockNumberEditTextHint">blockNumber</string>
    <string name="StudyLayoutRequestLayoutAlertDialogEntryTypeLabelTextViewText">entryType:</string>
    <string name="StudyLayoutRequestLayoutAlertDialogObservationUnitDbIdEditTextHint">observationUnitDbId</string>
    <string name="StudyLayoutRequestLayoutAlertDialogPositionCoordinateXEditTextHint">positionCoordinateX</string>
    <string name="StudyLayoutRequestLayoutAlertDialogPositionCoordinateXTypeLabelTextViewText">positionCoordinateXType:</string>
    <string name="StudyLayoutRequestLayoutAlertDialogPositionCoordinateYEditTextHint">positionCoordinateY</string>
    <string name="StudyLayoutRequestLayoutAlertDialogPositionCoordinateYTypeLabelTextViewText">positionCoordinateYType:</string>
    <string name="StudyLayoutRequestLayoutAlertDialogReplicateEditTextHint">replicate</string>
    <string name="NewObservationsRequestObservationsAlertDialogTitle">NewObservationsRequestObservations</string>
    <string name="NewObservationsRequestObservationsAlertDialogCollectorEditTextHint">collector</string>
    <string name="NewObservationsRequestObservationsAlertDialogObservationDbIdEditTextHint">observationDbId</string>
    <string name="NewObservationsRequestObservationsAlertDialogObservationTimeStampEditTextHint">observationTimeStamp</string>
    <string name="NewObservationsRequestObservationsAlertDialogObservationUnitDbIdEditTextHint">observationUnitDbId</string>
    <string name="NewObservationsRequestObservationsAlertDialogObservationVariableDbIdEditTextHint">observationVariableDbId</string>
    <string name="NewObservationsRequestObservationsAlertDialogValueEditTextHint">value</string>
    <string name="NewObservationUnitRequestAlertDialogTitle">NewObservationUnitRequest</string>
    <string name="NewObservationUnitRequestAlertDialogBlockNumberEditTextHint">blockNumber</string>
    <string name="NewObservationUnitRequestAlertDialogEntryNumberEditTextHint">entryNumber</string>
    <string name="NewObservationUnitRequestAlertDialogEntryTypeEditTextHint">entryType</string>
    <string name="NewObservationUnitRequestAlertDialogGermplasmDbIdEditTextHint">germplasmDbId</string>
    <string name="NewObservationUnitRequestAlertDialogObservationLevelEditTextHint">observationLevel</string>
    <string name="NewObservationUnitRequestAlertDialogObservationUnitDbIdEditTextHint">observationUnitDbId</string>
    <string name="NewObservationUnitRequestAlertDialogObservationUnitNameEditTextHint">observationUnitName</string>
    <string name="NewObservationUnitRequestAlertDialogObservationUnitXrefLabelTextViewText">observationUnitXref:</string>
    <string name="NewObservationUnitRequestAlertDialogObservationsLabelTextViewText">observations:</string>
    <string name="NewObservationUnitRequestAlertDialogPlantNumberEditTextHint">plantNumber</string>
    <string name="NewObservationUnitRequestAlertDialogPlotNumberEditTextHint">plotNumber</string>
    <string name="NewObservationUnitRequestAlertDialogPositionCoordinateXEditTextHint">positionCoordinateX</string>
    <string name="NewObservationUnitRequestAlertDialogPositionCoordinateXTypeLabelTextViewText">positionCoordinateXType:</string>
    <string name="NewObservationUnitRequestAlertDialogPositionCoordinateYEditTextHint">positionCoordinateY</string>
    <string name="NewObservationUnitRequestAlertDialogPositionCoordinateYTypeLabelTextViewText">positionCoordinateYType:</string>
    <string name="NewObservationUnitRequestAlertDialogObservationTreatmentsLabelTextViewText">treatments:</string>
    <string name="NewObservationUnitRequestAlertDialogReplicateEditTextHint">replicate</string>
    <string name="NewObservationUnitRequestAlertDialogStudyDbIdEditTextHint">studyDbId</string>
    <string name="ObservationUnitXrefAlertDialogTitle">ObservationUnitXref</string>
    <string name="ObservationUnitXrefAlertDialogIdEditTextHint">id</string>
    <string name="ObservationUnitXrefAlertDialogSourceEditTextHint">source</string>
    <string name="NOURObservationAlertDialogTitle">Observation</string>
    <string name="NOURObservationAlertDialogGermplasmDbIdEditTextHint">germplasmDbId</string>
    <string name="NOURObservationAlertDialogGermplasmNameEditTextHint">germplasmName</string>
    <string name="NOURObservationAlertDialogObservationDbIdEditTextHint">observationDbId</string>
    <string name="NOURObservationAlertDialogObservationLevelEditTextHint">observationLevel</string>
    <string name="NOURObservationAlertDialogObservationTimeStampEditTextHint">observationTimeStamp</string>
    <string name="NOURObservationAlertDialogObservationUnitDbIdEditTextHint">observationUnitDbId</string>
    <string name="NOURObservationAlertDialogObservationUnitNameEditTextHint">observationUnitName</string>
    <string name="NOURObservationAlertDialogObservationVariableDbIdEditTextHint">observationVariableDbId</string>
    <string name="NOURObservationAlertDialogObservationVariableNameEditTextHint">observationVariableName</string>
    <string name="NOURObservationAlertDialogOperatorEditTextHint">operator</string>
    <string name="NOURObservationAlertDialogSeasonLabelTextViewText">season:</string>
    <string name="NOURObservationAlertDialogStudyDbIdEditTextHint">studyDbId</string>
    <string name="NOURObservationAlertDialogUploadedByEditTextHint">uploadedBy</string>
    <string name="NOURObservationAlertDialogValueEditTextHint">value</string>
    <string name="SeasonAlertDialogTitle">Season</string>
    <string name="SeasonAlertDialogSeasonEditTextHint">season</string>
    <string name="SeasonAlertDialogSeasonDbIdEditTextHint">seasonDbId</string>
    <string name="SeasonAlertDialogYearEditTextHint">year</string>
    <string name="ObservationTreatmentAlertDialogTitle">Treatment</string>
    <string name="ObservationTreatmentAlertDialogFactorEditTextHint">factor</string>
    <string name="ObservationTreatmentAlertDialogModalityEditTextHint">modality</string>
    <string name="NewObservationsTableRequestAlertDialogTitle">NewObservationsTableRequest</string>
    <string name="NewObservationsTableRequestAlertDialogHeaderRowEditTextHint">headerRow</string>
    <string name="NewObservationsTableRequestAlertDialogObservationVariableDbIdsEditTextHint">observationVariableDbIds</string>
    <string name="NewObservationsTableRequestAlertDialogDataEditTextHint">data</string>
    <string name="PhenotypesRequestDataAlertDialogTitle">PhenotypesRequestData</string>
    <string name="PhenotypesRequestDataAlertDialogObservationUnitDbIdEditTextHint">observationUnitDbId</string>
    <string name="PhenotypesRequestDataAlertDialogObservationsLabelTextViewText">observations:</string>
    <string name="PhenotypesRequestDataAlertDialogStudyDbIdEditTextHint">studyDbId</string>
    <string name="PRObservationAlertDialogTitle">Observation</string>
</resources>