<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/studiesObservationGermplasmDbIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogGermplasmDbIdEditTextHint"
        android:inputType="number"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationGermplasmNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogGermplasmNameEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationObservationDbIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogObservationDbIdEditTextHint"
        android:inputType="number"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationObservationLevelEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogObservationLevelEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationObservationTimeStampEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogObservationTimeStampEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationObservationUnitDbIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogObservationUnitDbIdEditTextHint"
        android:inputType="number"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationObservationUnitNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogObservationUnitNameEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationObservationVariableDbIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogObservationVariableDbIdEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationObservationVariableNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogObservationVariableNameEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationOperatorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogOperatorEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/studiesObservationSeasonLabelTextView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"

            android:labelFor="@id/studiesObservationSeasonValueTextView"
            android:text="@string/NOURObservationAlertDialogSeasonLabelTextViewText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/studiesObservationSeasonValueTextView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_toRightOf="@id/studiesObservationSeasonLabelTextView"
            android:layout_toEndOf="@id/studiesObservationSeasonLabelTextView"

            android:layout_marginTop="10dp"

            android:text="@string/nullValueTextViewText"
            android:textSize="18sp" />

        <Button
            android:id="@+id/studiesObservationChangeSeasonButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            android:text="@string/changeButtonText"
            android:textAllCaps="false"

            tools:ignore="RelativeOverlap" />

    </RelativeLayout>



    <EditText
        android:id="@+id/studiesObservationStudyDbIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogStudyDbIdEditTextHint"
        android:inputType="number"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationUploadedByEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogUploadedByEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/studiesObservationValueEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NOURObservationAlertDialogValueEditTextHint"
        android:inputType="number"
        android:maxLines="1"
        tools:ignore="Autofill" />

</LinearLayout>